<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volume Setter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="vibrate">Vibrate</string>
    <string name="normal">Normal</string>
    <string name="silent">Silent</string>
    <string name="mode">Mode</string>
    <string name="setting">Volume</string>

    
    <string name="action_save">Save config</string>
    <string name="action_load">Load config</string>
</resources>
